# real-estate-scrapers

./: .gitignore  README.md  app.py  cdk.json  requirements-cdk.txt  setup-scrapers.md
.github/: CODEOWNERS
scraper-templates/: README.md
scraper-templates/sample-scraper-lambda/: README.md
scraper-templates/sample-scraper-lambda/app/: lambda_function.py  utils.py
scraper-templates/sample-scraper-lambda/cdk/: app.py  cdk.json  requirements-cdk.txt  scraper_stack.py  (+1 more)
scrapers/: README.md
scrapers/sample-scraper-lambda/: .gitignore  Makefile
scrapers/sample_scraper/: README.txt  lambda_function.py  run_local.py
scrapers/up-rera-scraper-app-runner/: .env.tmpl  .envrc  Dockerfile  README.md  Tiltfile  app.py  deploy.py  pyproject.toml
scrapers/up-rera-scraper-app-runner/src/server/: __init__.py
scrapers/up-rera-scraper-app-runner/src/server/agent/: agent.py  context.py  mcp_servers.py  routes.py  scrape_projects_mcp_server.py  tools.py
scrapers/up-rera-scraper-app-runner/src/server/healthz/: routes.py
scrapers/up-rera-scraper-app-runner/terraform/: .gitignore  tf-infra-wrapper.sh
scrapers/up-rera-scraper-app-runner/terraform/app-deploy/manifests/tilt/: Kustomization  deployment_app.yaml
scrapers/up-rera-scraper-app-runner/terraform/app-infra/: 1-main.tf  outputs.tf  providers.tf  variable-commons.tf  variable.tf
scrapers/up-rera-scraper-app-runner/terraform/tf-modules/app-runner/: common-variables.tf  commons.tf  main.tf  outputs.tf  variable.tf
scrapers/up-rera-scraper-app-runner/terraform/tf-vars/dev/: params.tfvars
stacks/: scraper_stack.py
(+9 files in other folders)
