[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "up-rera-scraper-app-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hypercorn",
    "dotenv>=0.9.9",
    "boto3>=1.40.6",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai-agents[litellm]>=0.2.4",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tenacity>=9.1.2"
    
]


[tool.hatch.build.targets.wheel]
packages = ["src/server"]

